--- a/home.html
+++ b/home.html
@@ -21,7 +21,9 @@
       <a href="about.html" class="btn">Things I Love About You</a><br>
       <a href="memories.html" class="btn">Our Memories</a><br>
       <a href="messages.html" class="btn">Little Messages</a><br>
-      <a href="rj-love.html" style="text-decoration: none;">
+      <a href="rj-love.html" style="text-decoration: none;"><br>
+        <a href="chat.html"><button>Our Chat</button></a>
+
         <button style="
           padding: 12px 25px;
           font-size: 1.2rem;
