--- a/home.html
+++ b/home.html
@@ -22,7 +22,8 @@
       <a href="memories.html" class="btn">Our Memories</a><br>
       <a href="messages.html" class="btn">Little Messages</a><br>
       <a href="rj-love.html" style="text-decoration: none;"><br>
-        <a href="chat.html"><button>Our Chat</button></a>
+
+
 
         <button style="
           padding: 12px 25px;
@@ -37,6 +38,9 @@
           ❤️ Button Simulator ❤️
         </button>
       </a>
+    <br>
+      <a href="chat.html" class="chat-btn">Our Chat</a>
+
       
     </div>
   </div>
